redesign mc api